fixed overall spacing issues

--- a/src/Sass/Admin.scss
+++ b/src/Sass/Admin.scss
@@ -37,9 +37,11 @@ a.edit-event-link {
 }
 
 .admin-container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   padding: 15px 0 0 45px;
+  max-width: 100%;
   width: 100%;
 }
 
