--- a/src/Sass/PageHeader.scss
+++ b/src/Sass/PageHeader.scss
@@ -2,10 +2,11 @@
 
 .page-header {
   display: flex !important;
+  box-sizing: border-box;
   padding: 5px 10px !important;
   margin: 0 0 15px 15px !important;
   background-color: v.$pageheader-background-color;
-  width: 100%;
+  width: calc(100% - 15px);
   align-items: center;
   justify-content: space-between;
   min-height: 45px;
